--- a/DOM & event/model.html
+++ b/DOM & event/model.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>model</title>
-    <link rel="stylesheet" href="./model.css">
-    
-</head>
-<body>
-    <ul>
-        <li class="show-modal">Show modal 1</li>
-        <li class="show-modal">Show modal 2</li>
-        <li class="show-modal">Show modal 3</li>
-    </ul>
-    <div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="model.css" />
+    <title>Modal window</title>
+  </head>
+  <body>
+    <button class="show-modal">Show modal 1</button>
+    <button class="show-modal">Show modal 2</button>
+    <button class="show-modal">Show modal 3</button>
+
+    <div class="modal hidden">
       <button class="close-modal">&times;</button>
-      <h1>I'm a modal window😍 </h1>
+      <h1>I'm a modal window 😍</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -28,6 +26,7 @@
       </p>
     </div>
     <div class="overlay hidden"></div>
-    <script src="./model.js"></script>
-</body>
+
+    <script src="model.js"></script>
+  </body>
 </html>
